--- a/bibi_calibre/changelog.txt
+++ b/bibi_calibre/changelog.txt
@@ -1,3 +1,15 @@
+[B]Version 1.2.0[/B] - 28 Mar 2021
+Version up from BiB/i 0.999.9-r7 to Bibi 1.2.0
+Based on BiB/i 0.999.9-r7 (2016/06/23)
+
+[B]Version 1.0.2[/B] - 28 Mar 2021
+Migrate from python2 to python3 for calibre 5.x
+Based on BiB/i 0.999.9-r7 (22 Jul 2017)
+
+[B]Version 1.0.2[/B] - 20 Oct 2017
+Version up bib/i from 0.999.4 to 0.999.9-r7
+Based on BiB/i 0.999.9-r7 (22 Jul 2017)
+
 [B]Version 1.0.0[/B] - 30 Nov 2016
 Initial release of BiB/i Calibre plugin
 Based on BiB/i v0.999.4 (2016/06/23)
