Added a setting to specify the "DocumentRoot" path when "httpd" is started.

--- a/bibi_calibre/changelog.txt
+++ b/bibi_calibre/changelog.txt
@@ -1,3 +1,7 @@
+[B]Version 1.2.0.2[/B] - 19 Mar 2022
+Added a setting to specify the "DocumentRoot" path when "httpd" is started.
+Based on BiBi 1.2.0 (2020/07/05)
+
 [B]Version 1.2.0.1[/B] - 19 Mar 2022
 Added a setting to specify the "port" number when "httpd" is started.
 Based on BiBi 1.2.0 (2020/07/05)
